--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,13 +1,6 @@
 <div
   class="h-screen flex justify-content-center align-items-center"
-  style="
-    background: #5a3ec7;
-    background: linear-gradient(
-      69deg,
-      var(--p-primary-900) 0%,
-      var(--p-primary-50) 100%
-    );
-  "
+  style="background: var(--p-primary-1000)"
 >
   <div
     class="grid nested-grid grid-nogutter h-30rem border-round-2xl overflow-hidden shadow-7"
@@ -83,11 +76,9 @@
               />
             </div>
             <div class="col-12 text-center">
-              <p
-                class="text-primary-900 cursor-pointer"
-                routerLink="/login"
-                >Already have an account?</p
-              >
+              <p class="text-primary-900 cursor-pointer" routerLink="/login">
+                Already have an account?
+              </p>
             </div>
           </form>
         </div>
@@ -96,11 +87,7 @@
     <div
       class="col-7 h-full p-7"
       style="
-        background: linear-gradient(
-          40deg,
-          var(--p-primary-900) 0%,
-          var(--p-primary-50) 100%
-        );
+        background: var(--p-primary-1000);
       "
     >
       <img
