--- a/src/app/layout/components/dashboard/components/movements/components/movement-form/movement-form.component.html
+++ b/src/app/layout/components/dashboard/components/movements/components/movement-form/movement-form.component.html
@@ -1,3 +1,43 @@
+<p-confirmdialog #cd>
+  <ng-template
+    #headless
+    let-message
+    let-onAccept="onAccept"
+    let-onReject="onReject"
+  >
+    <div
+      class="grid nested-grid gap-2 grid-nogutter flex-column align-items-center bg-surface-0 px-3 py-4 relative"
+    >
+      <div
+        class="border-circle bg-primary h-6rem w-6rem flex justify-content-center align-items-center text-white absolute top-0 left-0"
+        style="transform: translate(140%, -50%);"
+      >
+        <i class="pi pi-question text-6xl"></i>
+      </div>
+      <span class="font-bold text-2xl block mt-7">{{
+        message.header
+      }}</span>
+      <p class="mb-0">{{ message.message }}</p>
+      <div class="grid grid-nogutter gap-2">
+        <div class="col-fixed">
+          <p-button
+            label="Save"
+            (onClick)="onAccept()"
+            styleClass="border-round"
+          ></p-button>
+        </div>
+        <div class="col-fixed">
+          <p-button
+            label="Cancel"
+            [outlined]="true"
+            (onClick)="onReject()"
+            styleClass="border-round"
+          ></p-button>
+        </div>
+      </div>
+    </div>
+  </ng-template>
+</p-confirmdialog>
 <p-dialog
   [modal]="true"
   [(visible)]="visible"
@@ -5,29 +45,10 @@
 >
   <ng-template #headless>
     @if(resources$ | async; as resources){
-    <form [formGroup]="cardForm" (ngSubmit)="save()">
+    <form [formGroup]="movementForm" (ngSubmit)="save()">
       <div class="grid nested-grid">
         <div class="col-12 text-primary text-2xl font-bold text-center">
           {{ isEditMode() ? "Edit inventory card" : "Add inventory card" }}
-        </div>
-        <div class="col-12">
-          <p-inputnumber
-          formControlName="quantity"
-            placeholder="quantity"
-            styleClass="border-bottom-1 surface-border"
-            [min]="1"
-          />
-        </div>
-        <div class="col-12">
-          <p-inputnumber
-            formControlName="unitCost"
-            inputId="minmaxfraction"
-            mode="decimal"
-            [minFractionDigits]="2"
-            placeholder="unit cost"
-            styleClass="border-bottom-1 surface-border"
-            [min]="0"
-          />
         </div>
         <div class="col-12">
           <div class="grid">
@@ -39,6 +60,25 @@
               optionLabel="name"
             />
           </div>
+        </div>
+        <div class="col-12" [ngClass]="hiddenInputQuantity()">
+          <p-inputnumber
+            formControlName="quantity"
+            placeholder="quantity"
+            styleClass="border-bottom-1 surface-border"
+            [min]="1"
+          />
+        </div>
+        <div class="col-12" [ngClass]="hiddenInputUnitCost()">
+          <p-inputnumber
+            formControlName="unitCost"
+            inputId="minmaxfraction"
+            mode="decimal"
+            [minFractionDigits]="2"
+            placeholder="unit cost"
+            styleClass="border-bottom-1 surface-border"
+            [min]="0"
+          />
         </div>
         <div class="col-12">
           <div class="grid">
@@ -52,7 +92,7 @@
             <p-button
               label="Save"
               type="submit"
-              [disabled]="!cardForm.valid"
+              [disabled]="!movementForm.valid"
               styleClass="border-round w-full"
               class="col-6"
             />
