--- a/src/app/layout/components/dashboard/components/cards/cards.component.html
+++ b/src/app/layout/components/dashboard/components/cards/cards.component.html
@@ -1,5 +1,12 @@
 @if(cards$ | async; as cards){
-  <app-items-grid [items]="cards" (itemSelected)="accessCard($event)"/>
+  @if(cards.length > 0){
+    <app-items-grid [items]="cards" (itemSelected)="accessCard($event)"/>
+  } @else {
+    <div class="min-h-screen flex flex-column justify-content-center align-items-center opacity-60">
+      <div class="bg-center w-8rem h-8rem" style="background: url('card.svg')"></div>
+      <p class="block text-3xl">Add a card to get started!</p>
+    </div>
+  }
 }
 <app-form-trigger [(visible)]="cardFormVisible">
   <ng-template #formTemplate>
