--- a/src/app/layout/components/dashboard/components/movements/movements.component.html
+++ b/src/app/layout/components/dashboard/components/movements/movements.component.html
@@ -1,6 +1,6 @@
 <div class="p-3 relative">
 @if(table$ | async; as table){
-    <p-table [value]="table[0]" styleClass="p-5" [size]="'small'" showGridlines>
+    <!-- <p-table [value]="table[0]" styleClass="p-5" [size]="'small'" showGridlines>
       <ng-template #header>
         <tr>
           <th>Date</th>
@@ -80,6 +80,14 @@
           [disabled]="!table[0].length"
         />
       </div>
-    </div>
+    </div> -->
+    <div class="preview-frame" *ngIf="pdfUrl">
+        <iframe
+          [src]="pdfUrl"
+          width="100%"
+          height="600px"
+          frameborder="0">
+        </iframe>
+      </div>
   }
 </div>
