Add responsive design

--- a/src/app/layout/components/dashboard/components/items-grid/items-grid.component.html
+++ b/src/app/layout/components/dashboard/components/items-grid/items-grid.component.html
@@ -1,4 +1,4 @@
-<div class="grid m-4 gap-5">
+<div class="grid m-4 gap-5 justify-content-center">
   @for(item of items(); track item.id){
     <div
       class="col-fixed h-15rem w-15rem border-round-lg hover:shadow-7 shadow-3 cursor-pointer relative overflow-hidden"
