--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -1,5 +1,5 @@
 <app-topbar/>
-<div class="min-h-screen">
+<div class="min-h-screen relative">
   <router-outlet></router-outlet>
 </div>
 <app-footer/>
