--- a/src/app/layout/components/dashboard/components/movements/movements.component.html
+++ b/src/app/layout/components/dashboard/components/movements/movements.component.html
@@ -55,28 +55,28 @@
       </tr>
     </ng-template>
   </p-table>
-  <div class="grid grid-nogutter gap-2 justify-content-center">
-    <div class="col-fixed">
+  <div class="grid grid-nogutter flex-column gap-2 justify-content-center align-items-center">
+    <div class="col-fixed w-10rem">
       <p-button
         (onClick)="exportToCSV(table[0])"
         label="Export to .CSV"
-        styleClass="border-round"
+        styleClass="border-round w-full"
         [disabled]="!table[0].length"
       />
     </div>
-    <div class="col-fixed">
+    <div class="col-fixed w-10rem">
       <p-button
         (onClick)="exportToExcel(table[0], table[1])"
         label="Export to .XLSX"
-        styleClass="border-round"
+        styleClass="border-round w-full"
         [disabled]="!table[0].length"
       />
     </div>
-    <div class="col-fixed">
+    <div class="col-fixed w-10rem">
       <p-button
         (onClick)="exportToPDF(table[0], table[1])"
         label="Export to .PDF"
-        styleClass="border-round"
+        styleClass="border-round w-full"
         [disabled]="!table[0].length"
       />
     </div>
