--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -3,27 +3,27 @@
   style="background: var(--p-primary-1000)"
 >
   <div
-    class="grid nested-grid grid-nogutter h-30rem border-round-2xl overflow-hidden shadow-7"
-    style="width: 60rem"
+    class="grid nested-grid grid-nogutter lg:h-30rem border-round-2xl overflow-hidden shadow-7"
+    style="width: 80vw"
   >
-    <div class="col-5 h-full surface-700">
+    <div class="col-12 lg:col-5 lg:h-full surface-700">
       <div
         class="grid nested-grid grid-nogutter p-4 bg-white justify-content-center"
       >
-        <div class="col-12 h-4rem">
-          <p class="text-2xl m-0 text-primary-900">
+        <div class="col-12 lg:h-4rem">
+          <p class="lg:text-2xl m-0 text-primary-900">
             Hello!<br />
-            <span class="text-3xl font-bold">Welcome</span>
+            <span class="lg:text-3xl font-bold">Welcome</span>
           </p>
         </div>
-        <div class="col-9 h-23rem">
+        <div class="col-12 sm:col-6 lg:col-9">
           <form
             [formGroup]="registerForm"
             (ngSubmit)="register()"
-            class="grid grid-nogutter h-full justify-content-center"
+            class="grid grid-nogutter lg:h-full justify-content-center align-items-center"
           >
             <div class="col-12">
-              <p class="text-color text-center text-2xl">
+              <p class="text-color text-center lg:text-2xl">
                 <span class="text-primary-900 font-bold">Register </span>your
                 account
               </p>
@@ -35,7 +35,7 @@
                 placeholder="Username"
                 formControlName="username"
                 style="border-bottom: 1px solid"
-                class="surface-border"
+                class="surface-border w-full"
               />
             </div>
             <div class="col-12">
@@ -45,7 +45,7 @@
                 placeholder="Email"
                 formControlName="email"
                 style="border-bottom: 1px solid"
-                class="surface-border"
+                class="surface-border w-full"
               />
             </div>
             <div class="col-12">
@@ -53,30 +53,30 @@
                 [toggleMask]="true"
                 placeholder="Password"
                 formControlName="password"
-                styleClass="border-bottom-1 surface-border"
+                styleClass="border-bottom-1 surface-border w-full"
               />
             </div>
-            <div class="col-12">
+            <div class="col-12 mb-2">
               <p-password
                 [toggleMask]="true"
                 placeholder="Confirm Password"
                 formControlName="confirmPassword"
-                styleClass="border-bottom-1 surface-border"
+                styleClass="border-bottom-1 surface-border w-full"
               />
             </div>
-            <div class="col-12 text-right">
-              <p class="text-primary-900 cursor-pointer">forgot password?</p>
-            </div>
-            <div class="col-8">
+            <!-- <div class="col-12 text-right">
+              <p class="text-primary-900 cursor-pointer my-2">forgot password?</p>
+            </div> -->
+            <div class="col-8 lg:col-fixed w-10rem">
               <p-button
                 label="Register"
                 type="submit"
                 [disabled]="!registerForm.valid"
-                styleClass="w-10rem border-round"
+                styleClass="w-full border-round m-auto"
               />
             </div>
             <div class="col-12 text-center">
-              <p class="text-primary-900 cursor-pointer" routerLink="/login">
+              <p class="text-primary-900 cursor-pointer mt-2 m-0" routerLink="/login">
                 Already have an account?
               </p>
             </div>
@@ -85,7 +85,7 @@
       </div>
     </div>
     <div
-      class="col-7 h-full p-7"
+      class="col-12 lg:col-7 h-10rem lg:h-full p-3 lg:p-7"
       style="
         background: var(--p-primary-1000);
       "
