Fix bugs on responsive design

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -3,9 +3,7 @@
   style="background: var(--p-primary-1000)"
 >
   <div
-    class="grid nested-grid grid-nogutter border-round-2xl overflow-hidden shadow-7"
-    style="width: 80vw"
-  >
+    class="grid nested-grid grid-nogutter border-round-2xl overflow-hidden shadow-7 lg:h-30rem container">
     <div class="col-12 lg:col-7 h-10rem lg:h-full p-3 lg:p-7" style="background: var(--p-primary-1000)">
       <img
         src="login.svg"
@@ -15,7 +13,7 @@
     </div>
     <div class="col-12 lg:col-5 md:h-full surface-700">
       <div
-        class="grid nested-grid grid-nogutter p-4 bg-white justify-content-center align-items-center md:w-20rem"
+        class="grid nested-grid grid-nogutter p-4 bg-white justify-content-center align-items-center sm:w-20rem md:w-full md:h-full"
       >
         <div class="col-12 lg:h-4rem">
           <p class="lg:text-2xl m-0 text-primary-900">
