--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -3,12 +3,10 @@
   style="background: var(--p-primary-1000)"
 >
   <div
-    class="grid nested-grid grid-nogutter lg:h-30rem border-round-2xl overflow-hidden shadow-7"
-    style="width: 80vw"
-  >
-    <div class="col-12 lg:col-5 lg:h-full surface-700">
+    class="grid nested-grid grid-nogutter lg:h-30rem border-round-2xl overflow-hidden shadow-7 container">
+    <div class="col-12 lg:col-5 md:h-full surface-700">
       <div
-        class="grid nested-grid grid-nogutter p-4 bg-white justify-content-center"
+        class="grid nested-grid grid-nogutter p-4 bg-white justify-content-center align-items-center sm:w-20rem md:w-full md:h-full"
       >
         <div class="col-12 lg:h-4rem">
           <p class="lg:text-2xl m-0 text-primary-900">
