Update validator  and input's placeholder

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -37,7 +37,7 @@
               <input
                 pInputText
                 type="text"
-                placeholder="Username"
+                placeholder="Username (min. 10 characters)"
                 formControlName="username"
                 style="border-bottom: 1px solid;"
                 class="surface-border w-full"
@@ -47,7 +47,7 @@
               <p-password
                 [toggleMask]="true"
                 [feedback]="false"
-                placeholder="Password"
+                placeholder="Password (min. 8 characters)"
                 formControlName="password"
                 styleClass="border-bottom-1 surface-border w-full"
               />
